# ssh-hans

./: .gitignore  .travis.yml  LICENSE  Makefile  README.md  ssh-hans.cabal  stack.ghc-7.10.yaml  stack.ghc-7.8.yaml  stack.ghc-8.0.yaml  stack.ghc-8.2.1.yaml
cbits/: umac128.c  umac64.c  zlib_alloc_hooks.c
client/: LoadKeys.hs  Main.hs  Openpty.hsc  README.md  UnixTerminalFlags.hsc
include/: umac.h
server/: LoadKeys.hs  Main.hs  Openpty.hsc  README.md  UnixTerminalFlags.hsc
src/Crypto/Hash/: UMAC.hs
src/Crypto/MAC/: UMAC.hs
src/Network/SSH/: Ciphers.hs  Client.hs  Compression.hs  Compression.hsc  Connection.hs  Keys.hs  LoadKeys.hs  Mac.hs  Messages.hs  Named.hs  Packet.hs  PrivateKeyFormat.hs  Protocol.hs  PubKey.hs  Rekey.hs  Server.hs  State.hs  TerminalModes.hs  Transport.hs  UserAuth.hs  ZlibCompression.hsc
tests/: Main.hs  UmacTests.hs
tests/Tests/: Messages.hs  Packet.hs  Transport.hs
