name:                ssh-hans
version:             0.1.0.0
synopsis:            Implementation of the SSH2.0 protocol
description:         Implementation of the SSH2.0 protocol
license:             BSD3
license-file:        LICENSE
author:              Trevor Elliott
maintainer:          trevor@galois.com
copyright:           2014-2015 Galois Inc, Trevor Elliott, Eric Mertens
category:            Network
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC ==7.8.4, GHC ==7.10.2

source-repository head
  type:                git
  location:            https://github.com/glguy/ssh-hans

library
  exposed-modules:     Network.SSH.Server
                       Network.SSH.State
                       Network.SSH.Keys
                       Network.SSH.PubKey
                       Network.SSH.Ciphers
                       Network.SSH.Connection
                       Network.SSH.Compression
                       Network.SSH.Mac
                       Network.SSH.Messages
                       Network.SSH.Protocol
                       Network.SSH.Packet
                       Network.SSH.Rekey
                       Network.SSH.TerminalModes
                       Network.SSH.PrivateKeyFormat
                       Network.SSH.Named

                       Crypto.MAC.UMAC

  build-depends:       base         >=4.7      && <4.9,
                       cereal       >=0.5.1.0  && <0.6,
                       bytestring   >=0.10.6.0 && <0.11,
                       cryptonite   >=0.9      && <0.10,
                       memory       >=0.10     && <0.11,
                       transformers >=0.2      && <0.5,
                       containers   >=0.5.5.1  && <0.6,
                       stm          >=2.4.4    && <2.5

  c-sources:           cbits/zlib_alloc_hooks.c
                       cbits/umac64.c
                       cbits/umac128.c
  install-includes:    umac.h
  include-dirs:        include

  build-tools:         hsc2hs
  extra-libraries:     z
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

executable server
  main-is:             Main.hs
  other-modules:       Openpty, UnixTerminalFlags, LoadKeys
  if os(halvm)
    buildable:         False
  else
    build-depends:     base         >=4.7      && <4.9,
                       bytestring   >=0.10.6.0 && <0.11,
                       cereal       >=0.5.1.0  && <0.6,
                       directory    >=1.2.2.0  && <1.3,
                       filepath     >=1.3.0.2  && <1.5,
                       memory       >=0.10     && <0.11,
                       network      >=2.6.2.1  && <2.7,
                       setgame      >=1.1      && <1.2,
                       unix         >=2.7.0.1  && <2.8,
                       vty          >=5.4      && <5.5,
                       ssh-hans

    hs-source-dirs:    server
    default-language:  Haskell2010
    ghc-options:       -Wall -threaded

test-suite umac
  type:                exitcode-stdio-1.0
  main-is:             UmacTests.hs
  hs-source-dirs:      tests
  default-language:    Haskell2010
  build-depends:       base         >=4.7      && <4.9,
                       cryptonite   >=0.9      && <0.10,
                       memory       >=0.10     && <0.11,
                       bytestring   >=0.10.6.0 && <0.11,
                       ssh-hans

test-suite tests
  buildable:           False
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  other-modules:       Tests.Messages
  hs-source-dirs:      tests
  build-depends:       base >= 4.7 && < 5,
                       bytestring,
                       cereal >= 0.4.0.1,
                       test-framework,
                       test-framework-quickcheck2,
                       QuickCheck,
                       cryptonite,
                       ssh-hans

  ghc-options:         -Wall

  default-language:  Haskell2010
