name:                ssh-hans
version:             0.1.0.0
synopsis:            Implementation of the SSH2.0 protocol
description:         Implementation of the SSH2.0 protocol
license:             BSD3
license-file:        LICENSE
author:              Trevor Elliott
maintainer:          trevor@galois.com
copyright:           2014-2015 Galois Inc, Trevor Elliott, Eric Mertens
category:            Network
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC ==7.8.4, GHC ==7.10.2, GHC ==8.0.1

source-repository head
  type:                git
  location:            https://github.com/glguy/ssh-hans

flag support_compression
  description:         Support zlib compression, which introduces a dependency on zlib. Compression is permanently disabled when building on HaLVM.
  default:             True
  manual:              True

flag build_examples
  description:         Build the example client and server. The examples are permanently disabled when building on HaLVM.
  default:             False
  manual:              False

library
  exposed-modules:     Network.SSH.Server
                       Network.SSH.Client
                       Network.SSH.State
                       Network.SSH.Keys
                       Network.SSH.LoadKeys
                       Network.SSH.PubKey
                       Network.SSH.Ciphers
                       Network.SSH.Connection
                       Network.SSH.Compression
                       Network.SSH.Mac
                       Network.SSH.Messages
                       Network.SSH.Protocol
                       Network.SSH.Packet
                       Network.SSH.Rekey
                       Network.SSH.TerminalModes
                       Network.SSH.PrivateKeyFormat
                       Network.SSH.Named

                       Crypto.MAC.UMAC

  build-depends:       base         >=4.7      && <4.10,
                       cereal       >=0.5.1.0  && <0.6,
                       bytestring   >=0.10.4.0 && <0.11,
                       cryptonite   >=0.14     && <0.21,
                       memory       >=0.10     && <0.14,
                       transformers >=0.2      && <0.6,
                       containers   >=0.5.5.1  && <0.6,
                       stm          >=2.4.4    && <2.5,
                       async        >=2.0.2    && <2.3

  c-sources:           cbits/umac64.c
                       cbits/umac128.c

  install-includes:    umac.h
  include-dirs:        include

  build-tools:         hsc2hs
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

  -- Force disable compression on HaLVM.
  if flag(support_compression) && !os(halvm)
    exposed-modules:     Network.SSH.ZlibCompression
    c-sources:           cbits/zlib_alloc_hooks.c
    extra-libraries:     z
    cpp-options:         -DSSH_HANS_SUPPORT_COMPRESSION

-- TODO(conathan): remove vestigial 'server' deps
executable client
  main-is:             Main.hs
  other-modules:       Openpty, UnixTerminalFlags
  if os(halvm) || !flag(build_examples)
    buildable:         False
  else
    build-depends:     base         >=4.7      && <4.10,
                       bytestring   >=0.10.6.0 && <0.11,
                       cereal       >=0.5.1.0  && <0.6,
                       directory    >=1.2.2.0  && <1.3,
                       filepath     >=1.3.0.2  && <1.5,
                       memory       >=0.10     && <0.14,
                       network      >=2.6.2.1  && <2.7,
                       unix         >=2.7.0.1  && <2.8,
                       vty          >=5.7      && <5.18,
                       async        >=2.0.2    && <2.3,
                       ssh-hans

    hs-source-dirs:    client
    default-language:  Haskell2010
    ghc-options:       -Wall -threaded

executable server
  main-is:             Main.hs
  other-modules:       Openpty, UnixTerminalFlags
  if os(halvm) || !flag(build_examples)
    buildable:         False
  else
    build-depends:     base         >=4.7      && <4.10,
                       bytestring   >=0.10.6.0 && <0.11,
                       cereal       >=0.5.1.0  && <0.6,
                       directory    >=1.2.2.0  && <1.3,
                       filepath     >=1.3.0.2  && <1.5,
                       memory       >=0.10     && <0.14,
                       network      >=2.6.2.1  && <2.7,
                       setgame      >=1.1      && <1.2,
                       unix         >=2.7.0.1  && <2.8,
                       vty          >=5.7      && <5.18,
                       ssh-hans

    hs-source-dirs:    server
    default-language:  Haskell2010
    ghc-options:       -Wall -threaded

test-suite umac
  type:                exitcode-stdio-1.0
  main-is:             UmacTests.hs
  hs-source-dirs:      tests
  default-language:    Haskell2010
  build-depends:       base         >=4.7      && <4.10,
                       cryptonite,
                       memory       >=0.10     && <0.14,
                       bytestring   >=0.10.6.0 && <0.11,
                       ssh-hans

test-suite tests
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  other-modules:       Tests.Messages,
                       Tests.Packet
  hs-source-dirs:      tests
  build-depends:       base >= 4.7 && < 5,
                       bytestring,
                       cereal >= 0.4.0.1,
                       test-framework,
                       test-framework-quickcheck2,
                       QuickCheck,
                       cryptonite,
                       ssh-hans

  ghc-options:         -Wall

  default-language:    Haskell2010
