name:                ssh-hans
version:             0.1.0.0
synopsis:            Implementation of the SSH2.0 protocol
description:         Implementation of the SSH2.0 protocol
license:             BSD3
license-file:        LICENSE
author:              Trevor Elliott, Eric Mertens, Nathan Collins
maintainer:          conathan@galois.com
copyright:           2014-2017 Galois Inc, Trevor Elliott, Eric Mertens, Nathan Collins
category:            Network
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC ==7.8.4, GHC ==7.10.2, GHC ==8.0.1

source-repository head
  type:                git
  location:            https://github.com/glguy/ssh-hans

flag support_compression
  description:         Support zlib compression, which introduces a dependency on zlib. Compression is permanently disabled when building on HaLVM.
  default:             True
  manual:              True

library
  exposed-modules:     Network.SSH.Server
                       Network.SSH.Client
                       Network.SSH.State
                       Network.SSH.Keys
                       Network.SSH.LoadKeys
                       Network.SSH.PubKey
                       Network.SSH.Ciphers
                       Network.SSH.Connection
                       Network.SSH.Compression
                       Network.SSH.Mac
                       Network.SSH.Messages
                       Network.SSH.Protocol
                       Network.SSH.Packet
                       Network.SSH.Rekey
                       Network.SSH.TerminalModes
                       Network.SSH.PrivateKeyFormat
                       Network.SSH.Named

                       Crypto.MAC.UMAC

  -- The cryptonite lower bound is based on 0.14 being the earliest
  -- version with 'DH.param_bits'.
  build-depends:       base,
                       cereal,
                       bytestring,
                       cryptonite,
                       memory,
                       transformers,
                       containers,
                       stm,
                       async

  c-sources:           cbits/umac64.c
                       cbits/umac128.c

  install-includes:    umac.h
  include-dirs:        include

  build-tools:         hsc2hs
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

  -- Force disable compression on HaLVM.
  if flag(support_compression) && !os(halvm)
    exposed-modules:     Network.SSH.ZlibCompression
    c-sources:           cbits/zlib_alloc_hooks.c
    extra-libraries:     z
    cpp-options:         -DSSH_HANS_SUPPORT_COMPRESSION

executable ssh-hans-example-client
  main-is:             Main.hs
  other-modules:       Openpty, UnixTerminalFlags
  if os(halvm)
    buildable:         False
  else
    build-depends:     base,
                       bytestring,
                       async,
                       network,
                       ssh-hans

    hs-source-dirs:    client
    default-language:  Haskell2010
    ghc-options:       -Wall -threaded

executable ssh-hans-example-server
  main-is:             Main.hs
  other-modules:       Openpty, UnixTerminalFlags
  if os(halvm)
    buildable:         False
  else
    build-depends:     base,
                       bytestring,
                       cereal,
                       directory,
                       filepath,
                       memory,
                       network,
                       setgame,
                       unix,
                       vty,
                       ssh-hans

    hs-source-dirs:    server
    default-language:  Haskell2010
    ghc-options:       -Wall -threaded

test-suite umac
  type:                exitcode-stdio-1.0
  main-is:             UmacTests.hs
  hs-source-dirs:      tests
  default-language:    Haskell2010
  build-depends:       base,
                       cryptonite,
                       memory,
                       bytestring,
                       ssh-hans

test-suite tests
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  other-modules:       Tests.Messages,
                       Tests.Packet
  hs-source-dirs:      tests
  build-depends:       base,
                       bytestring,
                       cereal,
                       test-framework,
                       test-framework-quickcheck2,
                       QuickCheck,
                       cryptonite,
                       ssh-hans

  ghc-options:         -Wall

  default-language:    Haskell2010
